--- a/src/global.scss
+++ b/src/global.scss
@@ -13,7 +13,7 @@
     .common-panel {
         background-color: var(--color-bg-2);
         border-radius: .25rem;
-        // overflow: auto;
+        overflow: auto;
         flex: 1;
         padding: 1.5rem;
         .common-query-form-container {
