--- a/src/global.scss
+++ b/src/global.scss
@@ -1,7 +1,11 @@
 //全局公共样式
+.breadcrumb {
+    padding: 0.5rem 1.25rem;
+}
 .common-page-container {
     background-color: var(--color-fill-2);
     padding: 1rem 1.25rem;
+    padding-top: 0;
     display: flex;
     height: 100%;
     &.transparent-bg {
